--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
+    "nodemailer-sendgrid": "^1.0.3",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.23.2"
+    "sequelize": "^6.23.2",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   }
 }
